# ros2-patrol-fall-detection

./: .gitignore  README.md  claude.md
src/dashboard/: README.md  package.xml  setup.py
src/dashboard/dashboard/: dashboard_server.py
src/dashboard/dashboard/static/: style.css
src/dashboard/dashboard/templates/: index.html
src/my_patrol/: package.xml  setup.cfg  setup.py
src/my_patrol/config/: rooms.yaml
src/my_patrol/my_patrol/: aruco_id_node.py  fall_detection_node.py  marker_follower.py  patrol_node.py  waypoint_saver.py
src/turtlebot3/turtlebot3_navigation2/param/humble/: waffle_pi.yaml
