<?xml version="1.0"?>
<package format="3">
  <name>dashboard</name>
  <version>0.0.0</version>
  <description>병실 모니터링 대시보드 (ROS2 토픽 구독 + Flask 웹서버)</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>turtlebot3_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
